--- a/src/app/pages/home/objective/objective.component.html
+++ b/src/app/pages/home/objective/objective.component.html
@@ -46,7 +46,7 @@
             <div class="flex">
                 <img src="../../../../assets/images/Icon awesome-check-circle.svg" alt="">
                 <p class="underline t-green-base bold">
-                    !Asocia productos para monitorear su progreso! 
+                    <a href="#products">!Asocia productos para monitorear su progreso! </a>
                  </p>
             </div>
         </div>
