--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -4,7 +4,23 @@
         <p>Inicio</p>
     </div>
     <div class="item-menu">
-        <img src="../../../assets/images/twitter.svg" alt="">
+        <img src="../../../assets/images/hoja1.svg" alt="">
         <p>Contratos</p>
+    </div>
+    <div class="item-menu">
+        <img src="../../../assets/images/Tool.svg" alt="">
+        <p>Acciones</p>
+    </div>
+    <div class="item-menu">
+        <img src="../../../assets/images/star.svg" alt="">
+        <p>Objetivos</p>
+    </div>
+    <div class="item-menu">
+        <img src="../../../assets/images/money.svg" alt="">
+        <p>Herramientas</p>
+    </div>
+    <div class="item-menu">
+        <img src="../../../assets/images/talk2.svg" alt="">
+        <p>Servicio al cliente</p>
     </div>
 </div>
