--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,17 +1,31 @@
-.container{
+/* Estilos para el contenedor principal */
+.container {
+    /* Margen izquierdo */
     margin-left: 50px;
+    /* Imagen de fondo */
     background-image: url('../../../assets/images/Group 3329.png');
+    /* Repetición de la imagen de fondo */
     background-repeat: no-repeat;
+    /* Posición de la imagen de fondo */
     background-position: center bottom;
+    /* Fijar la imagen de fondo */
     background-attachment: fixed; 
+    /* Tamaño de la imagen de fondo */
     background-size: 100%;
-    height: 100vh;
+    /* Altura del contenedor */
+    height: 100%;
 }
 
-.banner{
+/* Estilos para el banner */
+.banner {
+    /* Gradiente de fondo */
     background: linear-gradient(to bottom, #164a50, #175c63, #497478);
+    /* Tamaño del gradiente de fondo */
     background-size: 100% 20rem;
+    /* Repetición del gradiente de fondo */
     background-repeat: no-repeat;
+    /* Altura del banner */
     height: 100%;
+    /* Ancho del banner */
     width: 100%;
 }
