--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<app-sidebar></app-sidebar>
-<app-home></app-home>
+<div class="container">
+    <app-header></app-header>
+    <app-sidebar></app-sidebar>
+    <app-home></app-home>
+</div>
